--- a/dev-demo/index.html
+++ b/dev-demo/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Development Demo for toolset-injection-boilerplate</title>
+    <link rel="stylesheet" type="text/css" href="../dist/style.css" />
     <link rel="stylesheet" type="text/css" href="demo.css" />
-    <link rel="stylesheet" type="text/css" href="../dist/index.css" />
-    <!-- <script src="jquery.js"></script> -->
-    <!-- <script src="my-library.js"></script> -->
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../dist/script.js"></script>
     <script src="demo.js"></script>
   </head>
   <body>
@@ -14,7 +14,7 @@
     <p class="hello-demo-js"></p>
     <div class="hello-sass-outer"><p class="hello-sass-inner"></p></div>
     <p class="hello-rollup"></p>
-    <p class="hello-my-import"></p>
+    <p class="hello-import"></p>
     <p class="hello-babel"></p>
     <p class="hello-jquery-external"></p>
   </body>
