Add browser sync dev env

--- a/dev-demo/index.html
+++ b/dev-demo/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Development Demo for toolset-injection-boilerplate</title>
-    <link rel="stylesheet" type="text/css" href="../dist/style.css" />
+    <link rel="stylesheet" type="text/css" href="build/style.css" />
     <link rel="stylesheet" type="text/css" href="demo.css" />
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
-    <script src="../dist/script.js"></script>
+    <script src="jquery/jquery.js"></script>
+    <script src="build/script.js"></script>
     <script src="demo.js"></script>
   </head>
   <body>
