Add bootstrap external

--- a/src/toolset-loop.html
+++ b/src/toolset-loop.html
@@ -1,19 +1,16 @@
-[wpv-layout-start]
-  [wpv-items-found]
-  <div class="wrapper">
-    <div class="jump-search__grid">
-      <div class="jump-search__grid-sizer"></div>
-      <!-- wpv-loop-start -->
-      <wpv-loop>
+[wpv-layout-start] [wpv-items-found]
+<div class="wrapper">
+  <div class="jump-search__grid">
+    <div class="jump-search__grid-sizer"></div>
+    <!-- wpv-loop-start -->
+    <wpv-loop>
       <div class="jump-search__grid-item">
         [wpv-post-body view_template="clinic-jump-postcard-md"]
       </div>
-      </wpv-loop>
-      <!-- wpv-loop-end -->
-    </div>
+    </wpv-loop>
+    <!-- wpv-loop-end -->
   </div>
-  [/wpv-items-found]
-  [wpv-no-items-found]
-  <strong>[wpml-string context="wpv-views"]No items found[/wpml-string]</strong>
-  [/wpv-no-items-found]
-[wpv-layout-end]
+</div>
+[/wpv-items-found] [wpv-no-items-found]
+<strong>[wpml-string context="wpv-views"]No items found[/wpml-string]</strong>
+[/wpv-no-items-found] [wpv-layout-end]
