--- a/dev-demo/index.html
+++ b/dev-demo/index.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <title>Development Demo for toolset-injection-boilerplate</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="build/style.css" />
     <link rel="stylesheet" type="text/css" href="demo.css" />
-    <script src="jquery/jquery.js"></script>
-    <script src="build/script.js"></script>
-    <script src="demo.js"></script>
   </head>
   <body>
     <p>Hello demo html!</p>
@@ -17,5 +15,10 @@
     <p class="hello-import"></p>
     <p class="hello-babel"></p>
     <p class="hello-jquery-external"></p>
+    <div class="hello-bootstrap-external"></div>
+    <script src="jquery/jquery.js"></script>
+    <script src="bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="build/script.js"></script>
+    <script src="demo.js"></script>
   </body>
 </html>
