Refactor with webpack

--- a/dev-demo/index.html
+++ b/dev-demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Development Demo for toolset-injection-boilerplate</title>
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="build/style.css" />
+    <link rel="stylesheet" type="text/css" href="build/styles.css" />
     <link rel="stylesheet" type="text/css" href="demo.css" />
   </head>
   <body>
@@ -18,7 +18,7 @@
     <div class="hello-bootstrap-external"></div>
     <script src="jquery/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
-    <script src="build/script.js"></script>
+    <script src="build/bundle.js"></script>
     <script src="demo.js"></script>
   </body>
 </html>
