Dev serve modules from /node_modules

--- a/dev-demo/index.html
+++ b/dev-demo/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Development Demo for toolset-injection-boilerplate</title>
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="build/styles.css" />
     <link rel="stylesheet" type="text/css" href="demo.css" />
   </head>
@@ -11,13 +11,13 @@
     <p class="hello-demo-css"></p>
     <p class="hello-demo-js"></p>
     <div class="hello-sass-outer"><p class="hello-sass-inner"></p></div>
-    <p class="hello-rollup"></p>
+    <p class="hello-webpack"></p>
     <p class="hello-import"></p>
     <p class="hello-babel"></p>
     <p class="hello-jquery-external"></p>
     <div class="hello-bootstrap-external"></div>
-    <script src="jquery/jquery.js"></script>
-    <script src="bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="build/bundle.js"></script>
     <script src="demo.js"></script>
   </body>
