--- a/dev-demo/index.html
+++ b/dev-demo/index.html
@@ -18,6 +18,7 @@
     <div class="hello-bootstrap-external"></div>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="build/utils.js"></script>
     <script src="build/bundle.js"></script>
     <script src="demo.js"></script>
   </body>
