Add postFake util

--- a/dev-demo/index.html
+++ b/dev-demo/index.html
@@ -16,6 +16,7 @@
     <p class="hello-babel"></p>
     <p class="hello-jquery-external"></p>
     <div class="hello-bootstrap-external"></div>
+    <div class="faker"></div>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="build/utils.js"></script>
