Prep for netlify demo deploy

--- a/dev-demo/index.html
+++ b/dev-demo/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <title>Development Demo for toolset-injection-boilerplate</title>
-    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="build/bootstrap.css"
+    />
     <link rel="stylesheet" type="text/css" href="build/styles.css" />
     <link rel="stylesheet" type="text/css" href="demo.css" />
   </head>
@@ -17,8 +21,8 @@
     <p class="hello-jquery-external"></p>
     <div class="hello-bootstrap-external"></div>
     <div class="faker"></div>
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="build/jquery.js"></script>
+    <script src="build/bootstrap.bundle.js"></script>
     <script src="build/utils.js"></script>
     <script src="build/bundle.js"></script>
     <script src="demo.js"></script>
